<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.radiocommande.RadioCommandeFragment"

        android:id="@+id/layout_rc"
        android:focusableInTouchMode="true"
    >

    <EditText
        android:id="@+id/editText_rc_hostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hostname"

        android:inputType="text"
        />

    <Button
        android:id="@+id/button_rc_connect"
        android:text="@string/connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@id/editText_rc_hostname"
        />

    <ScrollView
        android:id="@+id/scroller_rc_log"
        android:layout_width="fill_parent"
        android:layout_height="150dp"

        android:layout_below="@+id/button_rc_connect"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="4dp"

        android:background="#E0F7FA"
        android:clipToPadding="false"
        android:fadeScrollbars="false"

        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"

        android:scrollbars="vertical">

        <TextView
            android:id="@+id/text_radiocommande_log"
            android:layout_width="fill_parent"

            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="Log..."

            />
    </ScrollView>

    <EditText
        android:id="@+id/editText_rc_command"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/scroller_rc_log"

        android:inputType="text"

        android:text="fwd-4150" />

    <Button
        android:id="@+id/button_rc_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroller_rc_log"

        android:layout_toRightOf="@+id/editText_rc_command"
        android:text="@string/envoi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <Button
        android:id="@+id/button_rc_haut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haut"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:layout_toRightOf="@+id/editText_rc_command"
        android:layout_below="@+id/editText_rc_command"
        />

    <Button
        android:id="@+id/button_rc_gauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gauche"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:layout_below="@+id/button_rc_haut"
        android:layout_toLeftOf="@+id/button_rc_stop"
        />

    <Button
        android:id="@+id/button_rc_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:layout_toRightOf="@+id/editText_rc_command"
        android:layout_below="@+id/button_rc_haut"
        />

    <Button
        android:id="@+id/button_rc_droite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droite"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:layout_toRightOf="@+id/button_rc_stop"
        android:layout_below="@+id/button_rc_haut"
        />

    <Button
        android:id="@+id/button_rc_bas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bas"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:layout_toRightOf="@+id/button_rc_gauche"
        android:layout_below="@+id/button_rc_stop"
     />

</RelativeLayout>