<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_radiocommande">

    <fragment
            android:id="@+id/navigation_radiocommande"
            android:name="fr.atech.robotcom.ui.radiocommande.RadioCommandeFragment"
            android:label="@string/title_radiocommande"
            tools:layout="@layout/fragment_radiocommande"/>

    <fragment
            android:id="@+id/navigation_configuration"
            android:name="fr.atech.robotcom.ui.configuration.ConfigurationFragment"
            android:label="@string/title_configuration"
            tools:layout="@layout/fragment_configuration"/>

    <fragment
            android:id="@+id/navigation_infos_robot"
            android:name="fr.atech.robotcom.ui.robot.RobotFragment"
            android:label="@string/title_infos_robot"
            tools:layout="@layout/fragment_infos_robot"/>
</navigation>