<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.configuration.ConfigurationFragment">

    <TextView
            android:id="@+id/text_config_titre"
            android:text="@string/title_configuration"

            android:textAlignment="center"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_config_ip_robot"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Switch
            android:id="@+id/switch_config_cote_robot"
            android:text="@string/switch_cote_robot"

            android:checked="true"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/text_config_titre"
            android:switchPadding="20dp"
        />

    <TextView
            android:id="@+id/text_config_ip_robot"
            android:text="@string/label_ip_robot"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/switch_config_cote_robot"
    />

    <EditText
            android:id="@+id/editText_config_ip_robot"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_config_ip_robot"
            android:layout_below="@+id/text_config_titre"

            android:layout_marginTop="18dp"
            android:ems="10"
        />

    <Button
            android:id="@+id/button_config_save"
            android:text="@string/button_save"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_config_ip_robot"
            android:layout_centerHorizontal="true"

            android:textAlignment="center"
        />


    <TextView
            android:id="@+id/text_config_save_result"
            android:text="..."

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_config_save"
            android:layout_centerHorizontal="true"
    />


</RelativeLayout>